# webhdfs-example

./: Dockerfile  LICENSE  README.md  minikerberos.py  pyproject.toml  requirements.txt  webhdfs-read.py  webhdfs-upload-file.py  webhdfs_download_file.py  webhdfs_upload_directory.py  webhdfs_upload_file.py
v2/: main-keytab.py  main.py  requirements.txt
v3/: load_dir.py  load_file.py  main.py  upload_file.py
v4/: hdfs_read.py  run.sh
v5/: README.md  hdfs_write.py
