[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "webhdfs-kerberos"
version = "0.1.0"
description = "Scripts to upload and download files from HDFS using WebHDFS with Kerberos authentication."
authors = ["Pavel Sozonov <pavel.sozonov@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/PavelSozonov/webhdfs-example"

[tool.poetry.dependencies]
python = ">=3.6"
requests = "2.31.0"
minikerberos = "^0.6.0"

[tool.poetry.urls]
homepage = "https://github.com/PavelSozonov/webhdfs-example"
